# wave_predictor

./: README.md  app.py  eda_plots.py  explore_dataset.py  model.pkl  pyproject.toml  requirements.txt  train_model.py  transform_dataset.py
data/: sea_activity_dataset.csv
templates/: index.html
